MMA-7601 Refaktorer rdist002-flyt